@startuml US09_DM
hide methods
skinparam classAttributeIconSize 0

class Company {
  -designation 
}

class VaccinationCenter {
  -name
  -address
  -phone number
  -fax number
  -e-mail address
  -website address
  -opening and closing hours
  -slot duration
  -maximum vaccines per slot
}

class Administrator {

}
Company "1" -- "*" Administrator : knows >
Administrator "1" -- "*" VaccinationCenter : creates 
VaccinationCenter "*" -- "1" Company : belongs to >
@enduml